2004-05-01  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (execute_cfa_program): Complain if we encounter a
	DW_CFA_restore state without a matching DW_CFA_remember_state
	instead of aborting.  Fixes PR backtrace/1589.

2004-04-30  Joel Brobecker  <brobecker@gnat.com>

	* MAINTAINERS: Add self as AIX maintainer.
	Update my e-mail address in write-after-approval section.

2004-04-30  Andrew Cagney  <cagney@redhat.com>

	* frame.c (frame_type_from_pc): Delete call to PC_IN_SIGTRAMP.
	(legacy_get_prev_frame): Ditto.

	* mips-tdep.c (mips_pc_in_sigtramp): Delete.
	(mips_gdbarch_init): Do not set pc_in_sigtramp.
	* mipsread.c (sigtramp_address): Delete extern variable.
	(mipscoff_new_init): Delete reference.
	* mdebugread.c (sigtramp_address, sigtramp_end): Delete variables.
	(fixup_sigtramp): Delete function.
	* config/mips/tm-mips.h (sigtramp_address, sigtramp_end)
	(fixup_sigtramp): Delete declarations.

	* ppcnbsd-tdep.c (ppcnbsd_init_abi): Do not set
	deprecated_pc_in_sigtramp.
	(ppcnbsd_pc_in_sigtramp): Delete function.

2004-05-01  Mark Kettenis  <kettenis@gnu.org>

	* config/m68k/nm-nbsd.h: Tweak comments.
	* config/m68k/nm-nbsdaout.h: Likewise.

2004-04-30  Andrew Cagney  <cagney@redhat.com>

	* arm-tdep.c (arm_sigtramp_unwind_sniffer): Call
	legacy_pc_in_sigtramp.
	* ia64-tdep.c (ia64_sigtramp_frame_sniffer): Ditto.

2004-05-01  Mark Kettenis  <kettenis@gnu.org>

	Add OpenBSD/m68k support.
	* NEWS (New native configurations): Mention OpenBSD/m68k.
	* m68kbsd-tdep.c: New file.
	* m68kbsd-nat.c: New file.
	* Makefile.in (ALLDEPFILES): Add m68kbsd-nat.c and m68kbsd-tdep.c.
	(m68kbsd-nat.o, m68kbsd-tdep.o): New dependencies.
	* configure.host: Add m68k-*-openbsd.
	* configure.tgt: Add m68k-*-openbsd.
	* config/m68k/tm-obsd.h: New file.
	* config/m68k/obsd.mt: New file.
	* config/m68k/obsd.mh: New file.
	* config/djgpp/fnchange.lst: Add entries for m68kbsd-nat.c and
	m68kbsd-tdep.c.

2004-04-30  Andrew Cagney  <cagney@redhat.com>
