@@ -1,5 +1,8 @@
 2004-05-01  Mark Kettenis  <kettenis@gnu.org>
 
+	* dwarf2-frame.c (read_encoded_value): Handle DW_EH_PE_funcrel
+	encondings.  Fixes PR gdb/1628.
+
 	* dwarf2-frame.c (execute_cfa_program): Complain if we encounter a
 	DW_CFA_restore state without a matching DW_CFA_remember_state
 	instead of aborting.  Fixes PR backtrace/1589.
